force-app/main/default/objects/Registration__c/fields/Reg_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Reg_Billing_Country__c</fullName>
    <label>Reg Billing Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>* Afghanistan</fullName>
            </value>
            <value>
                <fullName>* Albania</fullName>
            </value>
            <value>
                <fullName>* Algeria</fullName>
            </value>
            <value>
                <fullName>* American Samoa</fullName>
            </value>
            <value>
                <fullName>* Andorra</fullName>
            </value>
            <value>
                <fullName>* Angola</fullName>
            </value>
            <value>
                <fullName>* Anguilla</fullName>
            </value>
            <value>
                <fullName>* Antarctica</fullName>
            </value>
            <value>
                <fullName>* Antigua and Barbuda</fullName>
            </value>
            <value>
                <fullName>* Arctic Ocean</fullName>
            </value>
            <value>
                <fullName>* Argentina</fullName>
            </value>
            <value>
                <fullName>* Armenia</fullName>
            </value>
            <value>
                <fullName>* Aruba</fullName>
            </value>
            <value>
                <fullName>* Ashmore and Cartier Islands</fullName>
            </value>
            <value>
                <fullName>* Atlantic Ocean</fullName>
            </value>
            <value>
                <fullName>* Australia</fullName>
            </value>
            <value>
                <fullName>* Austria</fullName>
            </value>
            <value>
                <fullName>* Azerbaijan</fullName>
            </value>
            <value>
                <fullName>* Bahamas, The</fullName>
            </value>
            <value>
                <fullName>* Bahrain</fullName>
            </value>
            <value>
                <fullName>* Baker Island</fullName>
            </value>
            <value>
                <fullName>* Bangladesh</fullName>
            </value>
            <value>
                <fullName>* Barbados</fullName>
            </value>
            <value>
                <fullName>* Bassas da India</fullName>
            </value>
            <value>
                <fullName>* Belarus</fullName>
            </value>
            <value>
                <fullName>* Belgium</fullName>
            </value>
            <value>
                <fullName>* Belize</fullName>
            </value>
            <value>
                <fullName>* Benin</fullName>
            </value>
            <value>
                <fullName>* Bermuda</fullName>
            </value>
            <value>
                <fullName>* Bhutan</fullName>
            </value>
            <value>
                <fullName
        >* Macedonia, The Former Yugoslav Republic of</fullName>
                <label>* Macedonia, The Former Yugoslav Republic of</label>
            </value>
            <value>
                <fullName>* Madagascar</fullName>
            </value>
            <value>
                <fullName>* Malawi</fullName>
            </value>
            <value>
                <fullName>* Malaysia</fullName>
            </value>
            <value>
                <fullName>* Maldives</fullName>
            </value>
            <value>
                <fullName>* Mali</fullName>
            </value>
            <value>
                <fullName>* Malta</fullName>
            </value>
            <value>
                <fullName>* Man, Isle of</fullName>
            </value>
            <value>
                <fullName>* Marshall Islands</fullName>
            </value>
            <value>
                <fullName>* Martinique</fullName>
            </value>
            <value>
                <fullName>* Mauritania</fullName>
            </value>
            <value>
                <fullName>* Mauritius</fullName>
            </value>
            <value>
                <fullName>* Mayotte</fullName>
            </value>
            <value>
                <fullName>* Mexico</fullName>
            </value>
            <value>
                <fullName>* Micronesia, Federated States of</fullName>
            </value>
            <value>
                <fullName>* Midway Islands</fullName>
            </value>
            <value>
                <fullName>* Moldova</fullName>
            </value>
            <value>
                <fullName>* Monaco</fullName>
            </value>
            <value>
                <fullName>* Mongolia</fullName>
            </value>
            <value>
                <fullName>* Montserrat</fullName>
            </value>
            <value>
                <fullName>* Morocco</fullName>
            </value>
            <value>
                <fullName>* Mozambique</fullName>
            </value>
            <value>
                <fullName>* Namibia</fullName>
            </value>
            <value>
                <fullName>* Nauru</fullName>
            </value>
            <value>
                <fullName>* Navassa Island</fullName>
            </value>
            <value>
                <fullName>* Nepal</fullName>
            </value>
            <value>
                <fullName>* Netherlands</fullName>
            </value>
            <value>
                <fullName>* Netherlands Antilles</fullName>
            </value>
            <value>
                <fullName>* New Caledonia</fullName>
            </value>
            <value>
                <fullName>* New Zealand</fullName>
            </value>
            <value>
                <fullName>* Nicaragua</fullName>
            </value>
            <value>
                <fullName
        >* South Georgia and the South Sandwich Islands</fullName>
                <label>* South Georgia and the South Sandwich Islands</label>
            </value>
            <value>
                <fullName>* Southern Ocean</fullName>
            </value>
            <value>
                <fullName>* Spain</fullName>
            </value>
            <value>
                <fullName>* Spratly Islands</fullName>
            </value>
            <value>
                <fullName>* Sri Lanka</fullName>
            </value>
            <value>
                <fullName>* Sudan</fullName>
            </value>
            <value>
                <fullName>* Suriname</fullName>
            </value>
            <value>
                <fullName>* Svalbard</fullName>
            </value>
            <value>
                <fullName>* Swaziland</fullName>
            </value>
            <value>
                <fullName>* Sweden</fullName>
            </value>
            <value>
                <fullName>* Switzerland</fullName>
            </value>
            <value>
                <fullName>* Syria</fullName>
            </value>
            <value>
                <fullName>* Taiwan entry follows Zimbabwe</fullName>
            </value>
            <value>
                <fullName>* Tajikistan</fullName>
            </value>
            <value>
                <fullName>* Tanzania</fullName>
            </value>
            <value>
                <fullName>* Thailand</fullName>
            </value>
            <value>
                <fullName>* Togo</fullName>
            </value>
            <value>
                <fullName>* Tokelau</fullName>
            </value>
            <value>
                <fullName>* Tonga</fullName>
            </value>
            <value>
                <fullName>* Trinidad and Tobago</fullName>
            </value>
            <value>
                <fullName>* Tromelin Island</fullName>
            </value>
            <value>
                <fullName>* Tunisia</fullName>
            </value>
            <value>
                <fullName>* Turkey</fullName>
            </value>
            <value>
                <fullName>* Turkmenistan</fullName>
            </value>
            <value>
                <fullName>* Turks and Caicos Islands</fullName>
            </value>
            <value>
                <fullName>* Tuvalu</fullName>
            </value>
            <value>
                <fullName>* Uganda</fullName>
            </value>
            <value>
                <fullName>* Ukraine</fullName>
            </value>
            <value>
                <fullName>* United Arab Emirates</fullName>
            </value>
            <value>
                <fullName>* United Kingdom</fullName>
            </value>
            <value>
                <fullName>* United States</fullName>
                <default>true</default>
                <label>* United States</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>