force-app/main/default/objects/Registration__c/fields/Reg_Billing_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reg_Billing_Phone__c</fullName>
    <label>Reg Billing Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>