force-app/main/default/objects/Registration__c/fields/Reg_Billing_Phone_Ext__c.field-meta.xml
<CustomField>
    <fullName>Reg_Billing_Phone_Ext__c</fullName>
    <label>Reg Billing Phone Ext</label>
    <length>10</length>
    <type>Text</type>
</CustomField>