force-app/main/default/objects/Registration__c/fields/Reg_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Reg_Billing_State__c</fullName>
    <label>Reg Billing State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>