force-app/main/default/objects/Registration__c/fields/Reg_Billing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Reg_Billing_Zip_Code__c</fullName>
    <label>Reg Billing Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>