force-app/main/default/objects/Registration__c/fields/Reg_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Reg_Company_Name__c</fullName>
    <formula>Registrant_Name__r.Company_Name_Holder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>