force-app/main/default/objects/Registration__c/fields/Reg_Coord_Email__c.field-meta.xml
<CustomField>
    <fullName>Reg_Coord_Email__c</fullName>
    <formula>Event__r.Registration_Coordinator__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reg Coord Email</label>
    <type>Text</type>
</CustomField>