force-app/main/default/objects/Registration__c/fields/Reg_Date__c.field-meta.xml
<CustomField>
    <fullName>Reg_Date__c</fullName>
    <label>Reg Date</label>
    <type>Date</type>
</CustomField>