force-app/main/default/objects/Registration__c/fields/Reg_Fee__c.field-meta.xml
<CustomField>
    <fullName>Reg_Fee__c</fullName>
    <description
  >This is the total of all of the registration line items and discounts applied to this registration.</description>
    <inlineHelpText
  >This is the total of all of the registration line items and discounts applied to this registration.</inlineHelpText>
    <label>Registration Fee</label>
    <summarizedField>Registration_Line_Item__c.Cost__c</summarizedField>
    <summaryForeignKey
  >Registration_Line_Item__c.Registration__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>