force-app/main/default/objects/Registration__c/fields/Reg_Fee_Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Reg_Fee_Promo_Code__c</fullName>
    <formula>TEXT(Reg_Fee__c) &amp;&quot; | &quot;&amp; Promo_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reg Fee | Promo Code</label>
    <type>Text</type>
</CustomField>