force-app/main/default/objects/Registration__c/fields/Reg_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reg_Notes__c</fullName>
    <description
  >This is where any additional information about the registration can be kept.</description>
    <inlineHelpText
  >This is where any additional information about the registration can be kept.</inlineHelpText>
    <label>Reg Notes</label>
    <type>TextArea</type>
</CustomField>