force-app/main/default/objects/Registration__c/fields/Reg_Notes_Summary__c.field-meta.xml
<CustomField>
    <fullName>Reg_Notes_Summary__c</fullName>
    <formula>SUBSTITUTE(  
IF(
LEN(Reg_Notes__c) &gt; 50,
LEFT(Reg_Notes__c, 50)&amp;&quot;...&quot;,
LEFT(Reg_Notes__c, 50)
)
, &quot;&lt;BR&gt;&quot;, &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reg Notes Summary</label>
    <type>Text</type>
</CustomField>