force-app/main/default/objects/Registration__c/fields/Reg_Reader_Number__c.field-meta.xml
<CustomField>
    <fullName>Reg_Reader_Number__c</fullName>
    <formula>Registrant_Name__r.Reader_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reg Reader Number</label>
    <type>Text</type>
</CustomField>