force-app/main/default/objects/Registration__c/fields/Reg_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Reg_Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speaker</label>
    <type>Checkbox</type>
</CustomField>