force-app/main/default/objects/Registration__c/fields/Reg_Type__c.field-meta.xml
<CustomField>
    <fullName>Reg_Type__c</fullName>
    <inlineHelpText
  >Enter the type of registration i.e. Sponsor, Speaker, etc.</inlineHelpText>
    <label>Reg Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Govt Attendee</fullName>
                <default>true</default>
                <label>Govt Attendee</label>
            </value>
            <value>
                <fullName>Industry Attendee</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>ABSPON</fullName>
                <isActive>false</isActive>
                <label>ABSPON</label>
            </value>
            <value>
                <fullName>ADBD</fullName>
                <isActive>false</isActive>
                <label>ADBD</label>
            </value>
            <value>
                <fullName>ADBD/SPKR</fullName>
                <isActive>false</isActive>
                <label>ADBD/SPKR</label>
            </value>
            <value>
                <fullName>Advisory Board</fullName>
                <isActive>false</isActive>
                <label>Advisory Board</label>
            </value>
            <value>
                <fullName>GOVCOMP</fullName>
                <isActive>false</isActive>
                <label>GOVCOMP</label>
            </value>
            <value>
                <fullName>GOVPAID</fullName>
                <isActive>false</isActive>
                <label>GOVPAID</label>
            </value>
            <value>
                <fullName>Gov Attendee</fullName>
                <isActive>false</isActive>
                <label>Gov Attendee</label>
            </value>
            <value>
                <fullName>Government Attendee</fullName>
                <isActive>false</isActive>
                <label>Government Attendee</label>
            </value>
            <value>
                <fullName>Government Complimentary</fullName>
                <isActive>false</isActive>
                <label>Government Complimentary</label>
            </value>
            <value>
                <fullName>Government Paid</fullName>
                <isActive>false</isActive>
                <label>Government Paid</label>
            </value>
            <value>
                <fullName>INDCOMP</fullName>
                <isActive>false</isActive>
                <label>INDCOMP</label>
            </value>
            <value>
                <fullName>INDPAID</fullName>
                <isActive>false</isActive>
                <label>INDPAID</label>
            </value>
            <value>
                <fullName>Industry</fullName>
                <isActive>false</isActive>
                <label>Industry</label>
            </value>
            <value>
                <fullName>Industry Atendee</fullName>
                <isActive>false</isActive>
                <label>Industry Atendee</label>
            </value>
            <value>
                <fullName>Industry Complimentary</fullName>
                <isActive>false</isActive>
                <label>Industry Complimentary</label>
            </value>
            <value>
                <fullName>Industry Paid</fullName>
                <isActive>false</isActive>
                <label>Industry Paid</label>
            </value>
            <value>
                <fullName>Item Created</fullName>
                <isActive>false</isActive>
                <label>Item Created</label>
            </value>
            <value>
                <fullName>O Online</fullName>
                <isActive>false</isActive>
                <label>O Online</label>
            </value>
            <value>
                <fullName>PRES</fullName>
                <isActive>false</isActive>
                <label>PRES</label>
            </value>
            <value>
                <fullName>Private</fullName>
                <isActive>false</isActive>
                <label>Private</label>
            </value>
            <value>
                <fullName>Private Sector</fullName>
                <isActive>false</isActive>
                <label>Private Sector</label>
            </value>
            <value>
                <fullName>Public</fullName>
                <isActive>false</isActive>
                <label>Public</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>