force-app/main/default/objects/Registration__c/fields/Registrant_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Account_Id__c</fullName>
    <description>The registrant&apos;s Account Id.</description>
    <formula>Registrant_Name__r.account_id_formula__c</formula>
    <label>Registrant Account Id</label>
    <type>Text</type>
</CustomField>