force-app/main/default/objects/Registration__c/fields/Registrant_Email__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Email__c</fullName>
    <description
  >The email address of the person who registered. Used for Eloqua Lookup.</description>
    <formula>Registrant_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >The email address of the person who registered. Used for Eloqua Lookup.</inlineHelpText>
    <label>Registrant Email</label>
    <type>Text</type>
</CustomField>