force-app/main/default/objects/Registration__c/fields/Registrant_Jurisdiction_Id__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Jurisdiction_Id__c</fullName>
    <description>The Registrant&apos;s Nav Jurisdiction Id</description>
    <formula>Registrant_Name__r.Navigator_Jurisdiction_ID__c</formula>
    <label>Registrant Nav Jurisdiction Id</label>
    <type>Text</type>
</CustomField>