force-app/main/default/objects/Registration__c/fields/Registrant_Nav_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Nav_Account_Id__c</fullName>
    <description>The registrant&apos;s Navigator Account Id</description>
    <formula>Registrant_Name__r.Navigator_Account_Id__c</formula>
    <label>Registrant Nav Account Id</label>
    <type>Text</type>
</CustomField>