force-app/main/default/objects/Registration__c/fields/Registrant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Phone__c</fullName>
    <description
  >hidden - pulls in registrant&apos;s phone for reporting</description>
    <formula>Registrant_Name__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >hidden - pulls in registrant&apos;s phone for reporting</inlineHelpText>
    <label>Registrant Phone</label>
    <type>Text</type>
</CustomField>