force-app/main/default/objects/Registration__c/fields/Registrant_Title__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Title__c</fullName>
    <formula>Registrant_Name__r.Title</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>