force-app/main/default/objects/Registration__c/fields/Registration_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Registration_Coordinator__c</fullName>
    <formula
  >Event__r.Registration_Coordinator__r.FirstName&amp;&quot; &quot;&amp; Event__r.Registration_Coordinator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Coordinator</label>
    <type>Text</type>
</CustomField>