force-app/main/default/objects/Registration__c/fields/resource10viewed__c.field-meta.xml
<CustomField>
    <fullName>resource10viewed__c</fullName>
    <description
  >Name of 10th resource viewed in the Resource Widget</description>
    <inlineHelpText
  >Name of 10th resource viewed in the Resource Widget</inlineHelpText>
    <label>On24 resource10viewed</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>