force-app/main/default/objects/Registration__c/fields/resource1viewed__c.field-meta.xml
<CustomField>
    <fullName>resource1viewed__c</fullName>
    <description
  >Name of 1st resource viewed in the Resource Widget</description>
    <inlineHelpText
  >Name of 1st resource viewed in the Resource Widget</inlineHelpText>
    <label>On24 resource1viewed</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>