force-app/main/default/objects/Registration__c/fields/resource2viewed__c.field-meta.xml
<CustomField>
    <fullName>resource2viewed__c</fullName>
    <description
  >Name of 2nd resource viewed in the Resource Widget</description>
    <inlineHelpText
  >Name of 2nd resource viewed in the Resource Widget</inlineHelpText>
    <label>On24 resource2viewed</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>