force-app/main/default/objects/Registration__c/fields/SB_Client_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>SB_Client_Reg_No__c</fullName>
    <description>The old registration number from SB Client</description>
    <label>SB Client Reg No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>