force-app/main/default/objects/Registration__c/fields/Special_Terms_Formula__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms_Formula__c</fullName>
    <formula>Event_Contract__r.SpecialTerms</formula>
    <label>Special Terms</label>
    <type>Text</type>
</CustomField>