force-app/main/default/objects/Registration__c/fields/Sponsor_Company__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Company__c</fullName>
    <description
  >If the registrant is not with a sponsor, this field shows which sponsoring company&apos;s pass is being used.</description>
    <inlineHelpText
  >If the registrant is not with a sponsor, this field shows which sponsoring company&apos;s pass is being used.</inlineHelpText>
    <label>Sponsor Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>