force-app/main/default/objects/Registration__c/fields/Sponsorship_Level_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Level_Formula__c</fullName>
    <formula>TEXT(Event_Contract__r.Sponsorship_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsorship Level</label>
    <type>Text</type>
</CustomField>