force-app/main/default/objects/Registration__c/fields/survey10question__c.field-meta.xml
<CustomField>
    <fullName>survey10question__c</fullName>
    <description
  >Client-determined survey question asked to the audience.</description>
    <inlineHelpText
  >Client-determined survey question asked to the audience.</inlineHelpText>
    <label>On24 survey10question</label>
    <length>3600</length>
    <type>LongTextArea</type>
</CustomField>