force-app/main/default/objects/Registration__c/fields/survey12answer__c.field-meta.xml
<CustomField>
    <fullName>survey12answer__c</fullName>
    <description>User-submitted answer to the survey question.</description>
    <inlineHelpText
  >User-submitted answer to the survey question.</inlineHelpText>
    <label>On24 survey12answer</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>