force-app/main/default/objects/Registration__c/fields/survey12question__c.field-meta.xml
<CustomField>
    <fullName>survey12question__c</fullName>
    <label>On24 survey12question</label>
    <length>3600</length>
    <type>LongTextArea</type>
</CustomField>