force-app/main/default/objects/Registration__c/fields/Temporary_Id__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description
  >Used by offsite registration when there is no internet.   Badge scans will come in with this Id. A trigger will add the real registration id to the scan upon insert.</description>
    <externalId>true</externalId>
    <label>Temporary Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>