force-app/main/default/objects/Registration__c/fields/testresult__c.field-meta.xml
<CustomField>
    <fullName>testresult__c</fullName>
    <description>Pass/Fail</description>
    <inlineHelpText>Pass/Fail</inlineHelpText>
    <label>On24 testresult</label>
    <length>10</length>
    <type>Text</type>
</CustomField>