force-app/main/default/objects/Registration__c/fields/totalresourcesviewed__c.field-meta.xml
<CustomField>
    <fullName>totalresourcesviewed__c</fullName>
    <description
  >total number or resources viewed from the Resource Widget</description>
    <inlineHelpText
  >total number or resources viewed from the Resource Widget</inlineHelpText>
    <label>On24 totalresourcesviewed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>