force-app/main/default/objects/Registration__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <description
  >Convert this field to text once APEX &quot;eventAttendeeNotification_test&quot; has been removed from the system.</description>
    <externalId>true</externalId>
    <label>Authorize.Net ID (numeric)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>