force-app/main/default/objects/Registration__c/fields/userquestions__c.field-meta.xml
<CustomField>
    <fullName>userquestions__c</fullName>
    <description>This tag lists the questions asked by the user.</description>
    <inlineHelpText
  >This tag lists the questions asked by the user.</inlineHelpText>
    <label>On24 userquestions</label>
    <length>3600</length>
    <type>LongTextArea</type>
</CustomField>