force-app/main/default/objects/Registration__c/fields/VDGS_Hide_Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>VDGS_Hide_Sponsor_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >If this is a sponsor attendee and they do not wish to be shown on the solutions hub, check this box.</description>
    <inlineHelpText
  >If this is a sponsor attendee and they do not wish to be shown on the solutions hub, check this box.</inlineHelpText>
    <label>VDGS Hide Sponsor Name</label>
    <type>Checkbox</type>
</CustomField>