force-app/main/default/objects/Registration__c/fields/Web_Source__c.field-meta.xml
<CustomField>
    <fullName>Web_Source__c</fullName>
    <description
  >This is the URL for the website that was the referral source for this registration.</description>
    <inlineHelpText
  >This is the URL for the website that was the referral source for this registration.</inlineHelpText>
    <label>Web Source</label>
    <type>TextArea</type>
</CustomField>