force-app/main/default/objects/Registration__c/listViews/CDE_Q1_Special_Report_Webinar_4_21_201.listView-meta.xml
<ListView>
    <fullName>CDE_Q1_Special_Report_Webinar_4_21_201</fullName>
    <columns>Registrant_Name__c</columns>
    <columns>Registrant_Email__c</columns>
    <columns>Registrant_Title__c</columns>
    <columns>Reg_Company_Name__c</columns>
    <columns>Reg_Advisory_Board__c</columns>
    <columns>Non_Qual__c</columns>
    <columns>Reg_Type__c</columns>
    <columns>Event_No_Show__c</columns>
    <columns>Reg_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>contains</operation>
        <value>CDE - Harvard IT Summit 2019</value>
    </filters>
    <label>CDE Q1 Special Report Webinar - 4/21/201</label>
</ListView>