force-app/main/default/objects/Registration__c/listViews/CDE_Q4_Special_Report_Webinar_12_4_21.listView-meta.xml
<ListView>
    <fullName>CDE_Q4_Special_Report_Webinar_12_4_21</fullName>
    <columns>Registrant_Name__c</columns>
    <columns>Registrant_Title__c</columns>
    <columns>Reg_Company_Name__c</columns>
    <columns>Non_Qual__c</columns>
    <columns>Reg_Type__c</columns>
    <columns>Event_No_Show__c</columns>
    <columns>Reg_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>contains</operation>
        <value>CDE - Q4 Special Report Webinar - 12/4/2014</value>
    </filters>
    <label>CDE - Q4 Special Report Webinar - 12/4/2</label>
</ListView>