force-app/main/default/objects/Registration__c/listViews/CDG_DSPI_Q2_Webinar_4_16_2015.listView-meta.xml
<ListView>
    <fullName>CDG_DSPI_Q2_Webinar_4_16_2015</fullName>
    <columns>Registrant_Name__c</columns>
    <columns>Registrant_Email__c</columns>
    <columns>Registrant_Title__c</columns>
    <columns>Reg_Company_Name__c</columns>
    <columns>Non_Qual__c</columns>
    <columns>Event_No_Show__c</columns>
    <columns>Reg_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>contains</operation>
        <value>CDG - DSPI - Q2 Webinar - 4/16/2015</value>
    </filters>
    <label>CDG - DSPI - Q2 Webinar - 4/16/2015</label>
</ListView>