force-app/main/default/objects/Registration__c/listViews/CDG_Industry_Summit_2013.listView-meta.xml
<ListView>
    <fullName>CDG_Industry_Summit_2013</fullName>
    <columns>Event__c</columns>
    <columns>Attendee_Name__c</columns>
    <columns>Event_No_Show__c</columns>
    <columns>NAME</columns>
    <columns>Registrant_Name__c</columns>
    <columns>Reg_Date__c</columns>
    <columns>Reg_Type__c</columns>
    <columns>Reg_Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>contains</operation>
        <value>CDG - Industry Summit - 2013</value>
    </filters>
    <label>CDG - Industry Summit - 2013</label>
</ListView>